--- a/Bulgarian.lng
+++ b/Bulgarian.lng
@@ -1,5 +1,5 @@
-﻿|~LANGUAGEVERSION| |1.06|
-|~LANGUAGEAUTHOR|     |DonAngel|
+﻿|~LANGUAGEVERSION| |1.08|
+|~LANGUAGEAUTHOR|     |Doncho Angelov|
 |~LANGUAGEAUTHOREMAIL| |public@doncho.net|
 |~LANGUAGENAME|       |Български|
 
@@ -44,51 +44,10 @@
 
 |Ready.|                       |Готов.|
 
-|Enter password:|              |Въведете парола:|
-|Select the password disk drive where the key will be stored:|
-    |Изберете устройството,където ключът ще се запази:|
-|Create a new password database - Enter master key|
-    |Създаване на нова база данни с пароли - въведи главният ключ|
-|Set master key|               |Слагане на главният ключ|
-|Enter the master key for the new database.|
-    |Въвеждане на главният ключ за нова база данни.|
-|Create a new password database - Repeat master key|
-    |Създаване на нова база данни с пароли - Потворете главният ключ|
-|Repeat master password|       |Повтори главният ключ|
-|Repeat the master key for the new database.|
-    |Повторение на главният ключ на новата база с данни.|
-|Select the password disk drive to load the key from:|
-    |Изберете устройството, от което да се зареди ключа:|
-|Open database - Enter master key|
-    |Отваряне на база данни - Въведете главният ключ|
-|Enter master key|             |Въвеждане на главен ключ|
-|Enter the master key for this database.|
-    |Въведете главният ключ за тази база с данни.|
-|Key|                          |Ключ|
-|<no drive selected>|          |<Няма избрано у-во>|
-
 |Password Generator|           |Генератор на пароли|
-|This will generate a random password.|        |Тук се генерира произволна парола.|
 |Options|                      |Опции|
-|Password Generation Options|  |Опции за генерация на парола|
-|Number of characters:|        |Брой символи:|
-|Your new password:|           |Вашата нова парола:|
 |&Generate|                    |&Генериране|
 |&Accept|                      |&Приемане|
-|Upper alphabetic characters (A, B, C, ...)|
-    |Големи латински букви (A, B, C, ...)|
-|Lower alphabetic characters (a, b, c, ...)|
-    |Малки латински букви (a, b, c, ...)|
-|Numerical characters (1, 2, 3, ...)|
-    |Цифри (1, 2, 3, ...)|
-|Underline character '_'|
-    |Подчертаване '_'|
-|Minus '-'|
-    |Минус '-'|
-|Space ' '|
-    |Интервал ' '|
-|Special brackets ('{', '}', '[', ...)|
-    |Специални скоби ('{', '}', '[', ...)|
 
 |Group:|                       |Група:|
 |Title:|                       |Заглавие:|
@@ -188,8 +147,6 @@
 |You must generate some random values using the random mouse input box or the edit field before you can close this dialog.|
     |Трябва да въведете произволни данни използвайки или мишката, или полето за вход, преди да затворите този прозорец.|
 |No random input|              |Липсва произволният вход|
-|EITHER enter a password/passphrase OR select a key disk drive.|
-    |Или въведете парола/ключова дума ИЛИ изберете устройство, съдържащо дискът с ключа.|
 |The password must consist of at least one character!|
     |Паролата трябва да съдържа поне един символ!|
 |Select at least one of the options in the list above!|
@@ -217,9 +174,6 @@
     |Файлът не може да бъде отворен!|
 |File cannot be saved!|
     |Файлът не може да бъде записан!|
-
-|Password Safe files|          |Файловете с пароли|
-|All files|                    |Всички файлове|
 
 |The current file has been modified.|
     |Текущият файл беше модифициран.|
@@ -273,8 +227,6 @@
 |Please restart KeePass manually.|
     |Моля рестартирайте KeePass ръчно.|
 
-|CSV files|                    |CSV-Файлове|
-|Text files|                   |Текстови файлове|
 |An error occured while importing the file. File cannot be imported.|
     |Възникна грешка при импортиране на файла. Файлът не може да бъде импортиран.|
 |Select &Font|                 |Избор на &шрифт|
@@ -385,11 +337,8 @@
 |Using this wizard you can easily add TAN entries.|    |Използвайки този помощник може лесно да прибавяте TAN записи.|
 
 
-|&Only the following characters:| |&Само тези символи:|
 |&Open with KeePass| |&Отваряне с KeePass|
 |&Remove Association| |&Премахване на асоциацията|
-|Collect &entropy (recommended for strong passwords)| 
-    |Събира &ентропията (препоръчва се за силна парола)|
 |Create &Association| |Създава &асоциация|
 |Here you can associate .kdb files with KeePass (so KeePass opens the file when double-clicking on it):|
     |Тук може да асоциирате .kdb файловете с KeePass (така че KeePass ще отваря файловете при двойно кликване върху тях):|
@@ -562,9 +511,6 @@
 |Auto-sorting of the password list is enabled, you cannot sort the list manually now.|
 	|Само-преместването на списъка с пароли е включено, така че не може ръчно да сортирате.|
 
-|Change password of this database - Enter new master key|
-	|Смяна на паролата на тази база - Въвеждане на нов главен ключ|
-
 |Clipboard behavior:| 
 	|Поведение на клипбоардът:|
 |Disabled, not loaded| 
@@ -581,8 +527,6 @@
 	|Грешка при кодиране/декодиране|
 |Enhanced: allow pasting only once and protect against clipboard spies| 
 	|Разширено: позволява слагане само веднъж и защитава от шпиони на клипбоардът|
-|Enter the new master key for this database.| 
-	|Въвеждане на нов главен ключ за тази база данни.|
 |Error code| 
 	|Код на грешка|
 |Failed to change the .kdb file association. Make sure you have the rights to write to the registry and change file associations.|
@@ -608,8 +552,6 @@
 	|Тук може да настроите всички инсталирани KeePass разширения.|
 |Hide &Passwords Behind Asterisks (***)|
 	|Скриване на &паролите със звездички (***)|
-|If you notice any problems with this enhanced method, just switch back to the timed clipboard clearing method.|
-	|Ако срещате затруднения при използването на този разширен метод, просто преминете обратно към временно копиране в клипбоардът.|
 |Internal error|
 	|Вътрешна грешка|
 |Invalid parameter|
@@ -640,14 +582,6 @@
 	|Разширение|
 |Plugin has been designed for:|
 	|Това разширение служи за:|
-|Repeat master key|
-	|Повтаряне на главния ключ|
-|Repeat the master key for this database.|
-	|Повторете главния ключ за тази база данни.|
-|Save key-file manually to...|
-	|Ръчно записване на ключ-файла в...|
-|Select key-file manually...|
-	|Ръчно избиране на ключ-файла...|
 |Show &Last Access Time Column|
 	|Показване на колата &Последен достъп|
 |Show Note&s Column|
@@ -672,32 +606,18 @@
 	|Непозната грешка|
 |Visit &KeePass Homepage|
 	|Посещение на страницата на &KeePass|
-|Warning! It's possible that this option won't work correctly on your system, especially if you are using any clipboard enhancing tools or something like this.|
-	|Внимание! Възможно е тази настройка да не работи правилно на тази система, особено ако използвате някакви допълнителни програми за разширение на клипбоардът.|
-|You can choose an other hot key combination in 'Edit - Options - Setup'.|
-	|Може да изберете друга комбинация за горещи клавиши от 'Редакция - Опции - Настройка'.|
-|You've selected the AND key mode, so you must enter a password AND select a key-file.|
-	|Избрахте режим И на клавишите, така че трябва да въведете парола И да изберете ключ-файл.|
-|and|
-	|и|
 |cannot be loaded!|
 	|не може да се зареди!|
 
 
 
 
-|A key-file already exists on this drive. Do you want to overwrite or reuse it?|
-	|Ключ-файлът вече съществува на това устройство. Искате ли да се презапише или ще използвате този?|
 |Advanced|
 	|Разширен|
 |Backup|
 	|Резервни|
 |Click [Cancel] to abort changing the key.|
 	|Натиснете [Отказ] за да спрете смяната на ключа.|
-|Click [No] to reuse the selected key-file for this database.|
-	|Натиснете [Не] за да използвате отново избрания ключ-файл и за този файл с пароли.|
-|Click [Yes] to overwrite the key-file.|
-	|Натиснете [Да] за да унищожите и създадете отново този ключ-файл.|
 |Failed to create backup of this entry!|
 	|Резервно копие за този запис не се създаде!|
 |Immediately after opening a database|
@@ -733,8 +653,6 @@
 	|Тук се настройват файловете при износът.|
 |Icon|
 	|Икони|
-|Master key has been changed!|
-	|Главния ключ беше променен!|
 |Save backups of modified entries into the 'Backup' group|
 	|Създава резервни копия на променените записи в група 'Резерв'|
 |Save the database now in order to get the new key applied.|
@@ -773,17 +691,11 @@
 |Click to expire the entry in %u days|
 	|Избери за изтичане на записа след %u дни|
 
-|Enter the passphrase and/or select the key-disk's drive.|
-	|Въвеждане на ключовата дума и/или избиране на устройството на ключ-файла.|
-
 |Exclude entries in the '&Backup' group|
 	|Изключване на записите в група '&Резерв'|
 
 |Field has been pasted.|
 	|Полето беше вмъкнато.|
-
-|Higher ANSI characters|
-	|Специални ANSI символи|
 
 |Limit to single instance|
 	|Само едно копие на програмата|
@@ -799,9 +711,6 @@
 
 |Single left click instead of double-click for default tray icon action|
 	|Единичен ляв клик вместо двоен клик при действията с иконката до часовника|
-
-|Special characters|
-	|Специални символи|
 
 |The program is distributed under the terms of the GNU General Public License v2 or later.|
 	|Тази програма се разпространява под условията на лицензът GNU General Public License v2 или следващи|
@@ -831,9 +740,6 @@
 	
 |6 Months|
 	|6 месеца|
-	
-|Automatically generate random passwords for new entries|
-	|Автоматично генериране на случайна парола за новите записи|
 	
 |Include backup entries in quick searches (toolbar)|
 	|Включване на резервните записи в бързото търсене (от лентата)|
@@ -1031,3 +937,124 @@
     |Стойност|
 |You have the latest version.|
     |Имате последната версия.|
+
+|&Use Master Password AND Key File|
+    |Използване на главна парола И ключ-файл|
+|(Automatically generated passwords for new entries)|
+    |Автоматично генериране на пароли за новите записи|
+|(Custom)|
+    |(Друг)|
+|<No Key File Selected>|
+    |<Няма избран ключ-файл>|
+|A key file already exists on this drive. Do you want to overwrite or reuse it?|
+    |На това устройство има вече ключ-файл. Искате ли да го презапишете или ще използвате готовия?|
+|All Files|
+    |Всички файлове|
+|Also Include the Following Characters:|
+    |Използване и на следните символи:|
+|Attachment Description|
+    |Описание на прикрепеното|
+|Brackets ([, ], {, }, (, ), <, >)|
+    |Скоби ([, ], {, }, (, ), <, >)|
+|CSV Files|
+    |CSV файлове|
+|Change Composite Master Key|
+    |Смяна на общия ключ-файл|
+|Click [No] to reuse the selected key file for this database.|
+    |Изберете [Не/No] за да преизползвате избрания ключ-файл за тези данни.|
+|Click [Yes] to overwrite the key file.|
+    |Изберете [Да/Yes] за да презапишете ключ-файла.|
+|Collect &Entropy (recommended for strong passwords)|
+    |Изчисляване на &ентропията (препоръчва се за сложни пароли)|
+|Create New Password Database|
+    |Създаване на нова база с данни|
+|Create profile from current settings|
+    |Създаване на профил от текущите настройки|
+|Current Settings|
+    |Текущи настройки|
+|Delete selected profile|
+    |Изтриване на избрания профил|
+|Digits (0, 1, 2, ...)|
+    |Цифри (0, 1, 2, ...)|
+|EITHER enter a master password OR select a key file.|
+    |Въвеждане на главна парола ИЛИ избиране на ключ-файл.|
+|Enable remote control (allow applications to communicate with KeePass)|
+    |Разрешаване на външен контрол (позволява други програми да общуват с KeePass)|
+|Enter Composite Master Key|
+    |Въведете Общ главен ключ|
+|Enter Password:|
+    |Въведете парола:|
+|Enter the composite master key.|
+    |Въведете общия главен ключ.|
+|Enter the new composite master key.|
+    |Въведете новият общ главен ключ.|
+|Exclude Look-Alike Characters|
+    |Изключване на символите, които си приличат|
+|Generate Using Character Set:|
+    |Генерацията ще използва набор от символи:|
+|Generate Using Pattern:|
+    |Генерация чрез шаблон:|
+|Generated Password|
+    |Генерирана парола|
+|Here you can generate a random password.|
+    |Тук се генерира произволна парола.|
+|High ANSI Characters|
+    |Крайните ANSI символи|
+|If you notice any problems with the enhanced method, switch back to the timed clipboard clearing method.|
+    |Ако имате проблеми с разширения метод, използвайте предишния метод с изчистване на clipboard-а.|
+|KeePass Password Safe Files|
+    |Файлове с пароли на KeePass|
+|Key File:|
+    |Ключ файл:|
+|Length Of Generated Password:|	
+    |Дължина на генерираната парола:|
+|Lower-Case (a, b, c, ...)|
+    |Долен регистър (a, b, c, ...)|
+|Make sure the media that contains the key file is inserted and that KeePass has the rights to access it (check file access rights, ensure that no other application is blocking the file, ...).|
+    |Проверете дали носителя, съдържащ ключ-файла, е сложен и дали KeePass има права за достъп до него (проверете правата за достъп, проверете дали друга програма не блокира файла, ...).|
+|Master Password:|
+    |Главна парола:|
+|Minus (-)|
+    |Минус (-)|
+|Open Database|
+    |Отваряна на база с данни|
+|Password Generation Profile|
+    |Профил за генерация на парола|
+|Repeat Master Password|
+    |Повтаряне на главната парола|
+|Repeat the master password for the new database.|
+    |Повторете главната парола за новата база данни.|
+|Repeat the new master password for this database.|
+    |Повторете главната парола за тази база данни.|
+|Save Key File Manually To...|
+    |Ръчно записване на ключ-файла като...|
+|Select Key File Manually...|
+    |Ръчно избиране на ключ-файл...|
+|Set Composite Master Key|
+    |Избирена не общ главен ключ|
+|Space ( )|
+    |Интервал ( )|
+|Specify the composite master key.|
+    |Избиране на общ главен ключ.|
+|Text Files|
+    |Текстови файлове|
+|The composite master key has been changed!|
+    |Общия главен ключ беше сменен!|
+|There are too few characters in the character set to build up a password matching the specified rules|
+    |Наборът от символи не достига, за да се построи главна парола чрез избраните правила.|
+|URL Field Features|
+    |Способности на полето с адрес|
+|Underline (_)|
+    |Подчертаване (_)|
+|Upper-Case (A, B, C, ...)|
+    |Главни букви (A, B, C, ...)|
+|Use local date/time format instead of ISO notation|
+    |Използване на локалния формат за дата/час вместо ISO нотацията|
+|Warning! It is possible that this option won't work correctly on your system, especially if you are using any clipboard enhancing or clipboard backup tools.|
+    |Внимание! Възможно е тази настройка да не работи правилно на вашата система, особено ако използвате разширители на clipboard-а или програми за история на clipboard-a.|
+|You can choose a different hot key combination in 'Tools - Options - Setup'.|
+    |Може да изберете различна комбинация за горещ клавиш от 'Инструменти - Опции - Настройка'.|
+|You've selected the AND key mode, so you must enter a password AND select a key file.|
+    |Избрали сте режим "И", така че трябва да въведета главна парола И да изберете ключ-файл.|
+|Special (!, В§, $, %, &&, ...)|
+    |Специални (!, В§, $, %, &&, ...)|
